# libmowgli-glib

./: Makefile  README.md  configure.ac  extra.mk.in  libmowgli-glib.pc.in  mowgli-glib.h  mowgli-gpollable.c
tests/: Makefile  test-gpollable.c
